# Products.PloneKeywordManager

./: .coveragerc  .gitignore  .installed.txt  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  Makefile  README.rst  README.txt  base.cfg  buildout.cfg  pyproject.toml  requirements.txt  requirements52.txt  requirements60.txt  setup.cfg  setup.py  sources.ini  test-4.0.x.cfg  test-4.1.x.cfg  test-4.2.x.cfg  test-4.3.x.cfg  test_plone52.cfg  test_plone60.cfg  tox.ini  travis.cfg
.github/workflows/: CI.yml
Products/PloneKeywordManager/: .project  CHANGES.txt  README.txt  __init__.py  build_translations.sh  compat.py  config.py  configure.zcml  interfaces.py  setuphandlers.py  testing.py  tool.py  upgrades.py  upgrades.zcml  version.txt
Products/PloneKeywordManager/Extensions/: Install.py  __init__.py  install.py
Products/PloneKeywordManager/browser/: configure.zcml  prefs_keywords_view.pt  prefs_keywords_view.py
Products/PloneKeywordManager/i18n/: keyword_manager-da.po  keyword_manager-de.po  keyword_manager-fr.po  keyword_manager-he.po  keyword_manager-it.po  keyword_manager-nl.po  keyword_manager-pt-br.po  keyword_manager.pot
Products/PloneKeywordManager/locales/: Products.PloneKeywordManager.pot
Products/PloneKeywordManager/locales/da/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/de/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/fr/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/he/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/it/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/nl/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/pt/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/locales/pt_BR/LC_MESSAGES/: Products.PloneKeywordManager.po
Products/PloneKeywordManager/profiles/default/: actionicons.xml  actions.xml  browserlayer.xml  controlpanel.xml  metadata.xml  rolemap.xml  skins.xml  toolset.xml
Products/PloneKeywordManager/profiles/uninstall/: actionicons.xml  controlpanel.xml  skins.xml
Products/PloneKeywordManager/python-Levenshtein/: Levenshtein.c  Levenshtein.h  MANIFEST  NEWS  PKG-INFO  README  gendoc.py  setup.py
Products/PloneKeywordManager/skins/keyword_manager/: prefs_keywords_action_change.cpy  prefs_keywords_action_change.cpy.metadata  prefs_keywords_action_change.py  prefs_keywords_action_delete.cpy  prefs_keywords_action_delete.cpy.metadata  prefs_keywords_action_delete.py  prefs_keywords_view.cpt  prefs_keywords_view.cpt.metadata  prefs_keywords_view.pt  prefs_keywords_view.pt.metadata  validate_prefs_keywords.vpy
Products/PloneKeywordManager/tests/: base.py  test_controlpanel.py  test_dexterity.py  test_non_ascii_keywords.py  test_setup.py  test_skins.py
docs/: HISTORY.txt  INSTALL.txt  LICENSE.txt
news/: +jens.feature
src/Products/PloneKeywordManager/: __init__.py  compat.py  config.py  configure.zcml  interfaces.py  setuphandlers.py  testing.py  tool.py  upgrades.py  upgrades.zcml
src/Products/PloneKeywordManager/browser/: configure.zcml  interfaces.py  prefs_keywords_view.pt  prefs_keywords_view.py
src/Products/PloneKeywordManager/locales/de/LC_MESSAGES/: Products.PloneKeywordManager.po
src/Products/PloneKeywordManager/locales/he/LC_MESSAGES/: Products.PloneKeywordManager.po
src/Products/PloneKeywordManager/locales/it/LC_MESSAGES/: Products.PloneKeywordManager.po
src/Products/PloneKeywordManager/locales/pt/LC_MESSAGES/: Products.PloneKeywordManager.po
src/Products/PloneKeywordManager/locales/pt_BR/LC_MESSAGES/: Products.PloneKeywordManager.po
src/Products/PloneKeywordManager/profiles/default/: actionicons.xml  browserlayer.xml  controlpanel.xml  metadata.xml  rolemap.xml
src/Products/PloneKeywordManager/profiles/uninstall/: browserlayer.xml  controlpanel.xml  metadata.xml
src/Products/PloneKeywordManager/tests/: base.py  test_controlpanel.py  test_dexterity.py  test_non_ascii_keywords.py  test_setup.py
src/Products/PloneKeywordManager/www/: explainTool.zpt
