[metadata]
name = Products.PloneKeywordManager
description = Change, merge and delete keywords (subjects) in Plone.
long_description = file: README.rst, CHANGES.rst
classifiers =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.1
    Framework :: Plone :: 5.2
    Framework :: Plone :: Addon
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
keywords = plone, manage keywords subjects create merge delete
author = Maik Jabolnski, Michael Dunlap and the Plone collective
author_email = dunlapm@u.washington.edu
url = https://github.com/collective/Products.PloneKeywordManager
license = GNU General Public License v2 (GPLv2)


packages=find_packages(exclude=["ez_setup"]),
    namespace_packages=["Products"],
    include_package_data=True,
    zip_safe=False,
    install_requires=["setuptools", "plone.api"],
    extras_require={
        "Levenshtein": ["python-Levenshtein"],
        "test": ["plone.app.testing", "plone.app.dexterity"],
    },
    entry_points="""
      [z3c.autoinclude.plugin]
      target = plone
      """,
)


[distutils]
index-servers =
    pypi
    ploneorg

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 88
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3
