[metadata]
name = Products.PloneKeywordManager
description = Change, merge and delete keywords (subjects) in Plone.
long_description = file: README.rst, CHANGES.rst
version = 5.0.0
classifiers =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.2
    Framework :: Plone :: 6.0
    Framework :: Plone :: Addon
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
keywords = plone, manage keywords subjects create merge delete
author = Maik Jabolnski, Michael Dunlap and the Plone collective
author_email = dunlapm@u.washington.edu
url = https://github.com/collective/Products.PloneKeywordManager
license = GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
install_requires =
    plone.api
    setuptools
namespace_packages =
    Products
# thanks to this bug
# https://github.com/pypa/setuptools/issues/1136
# the following line w/o override in setup.py does not work.
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
test =
    plone.app.testing
    plone.app.contenttypes[test]
Levenshtein =
    python-Levenshtein
dev =
    pdbpp

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[distutils]
index-servers =
    pypi
    ploneorg

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[zest.releaser]
create-wheel = yes
