[metadata]
name = Products.PloneKeywordManager
description = Change, merge and delete keywords (subjects) in Plone.
long_description = file: README.rst, CHANGES.rst
version = 7.0.0.dev0
classifiers =
    Development Status :: 6 - Mature
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 6.2
    Framework :: Plone :: Addon
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Software Development :: Libraries :: Python Modules
keywords = plone, manage keywords subjects create merge delete
author = Maik Jabolnski, Michael Dunlap and the Plone collective
author_email = dunlapm@u.washington.edu
url = https://github.com/collective/Products.PloneKeywordManager
license = GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
install_requires =
    plone.api
zip_safe = False

[options.extras_require]
test =
    plone.app.testing
    plone.app.contenttypes[test]
Levenshtein =
    python-Levenshtein
dev =
    pdbpp

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[distutils]
index-servers =
    pypi
    ploneorg

[isort]
# black compatible Plone isort rules:
profile = plone

[zest.releaser]
create-wheel = yes
